--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "oxicrab"
 version = "0.11.2"
 edition = "2024"
 authors = ["James Turnbull <james@ltl.so>"]
-description = "A high-performance Rust multi-channel AI assistant framework"
+description = "High-performance Rust multi-channel AI assistant framework"
 license = "MIT"
 repository = "https://github.com/oxicrab/oxicrab"
 homepage = "https://oxicrab.dev"
@@ -118,13 +118,14 @@ maintainer = "James Turnbull <james@ltl.so>"
 copyright = "2025, James Turnbull"
 section = "utils"
 priority = "optional"
-depends = "$auto"
-extended-description = "A high-performance Rust multi-channel AI assistant framework that connects chat platforms (Telegram, Discord, Slack, WhatsApp, Twilio) to LLM providers via an agent loop with tool execution."
-conf-files = ["/etc/oxicrab/config.json"]
+depends = "$auto, adduser"
+extended-description = "High-performance Rust multi-channel AI assistant framework that connects chat platforms (Telegram, Discord, Slack, WhatsApp, Twilio) to LLM providers via an agent loop with tool execution."
+changelog = "deploy/deb/changelog"
 maintainer-scripts = "deploy/deb"
 assets = [
     ["target/release/oxicrab", "usr/bin/", "755"],
     ["deploy/oxicrab-system.service", "lib/systemd/system/oxicrab.service", "644"],
+    ["deploy/deb/lintian-overrides", "usr/share/lintian/overrides/oxicrab", "644"],
     ["config.example.json", "usr/share/doc/oxicrab/config.example.json", "644"],
     ["README.md", "usr/share/doc/oxicrab/README.md", "644"],
     ["LICENSE", "usr/share/doc/oxicrab/LICENSE", "644"],
