--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -116,9 +116,33 @@ jobs:
       - name: Prune incremental cache
         run: rm -rf target/x86_64-unknown-linux-gnu/release/incremental/
 
-  # ── Lint ────────────────────────────────────────────────────────────
-  lint:
-    name: Lint
+  # ── Quick Checks (no compilation) ────────────────────────────────────
+  check:
+    name: Format & Advisories
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ env.NIGHTLY_VERSION }}
+          components: rustfmt
+
+      - name: Install cargo-deny
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-deny
+
+      - name: Check formatting
+        run: cargo fmt -- --check
+
+      - name: cargo-deny advisories
+        run: cargo deny check advisories
+
+  # ── Clippy ─────────────────────────────────────────────────────────
+  clippy:
+    name: Clippy
     runs-on: ubuntu-latest
     needs: [compile-debug]
     permissions:
@@ -131,12 +155,12 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ env.NIGHTLY_VERSION }}
-          components: rustfmt, clippy
+          components: clippy
 
       - name: Install tools
         uses: taiki-e/install-action@v2
         with:
-          tool: clippy-sarif,sarif-fmt,cargo-deny
+          tool: clippy-sarif,sarif-fmt
 
       - name: Restore cargo cache
         uses: actions/cache/restore@v5
@@ -153,9 +177,6 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake
-
-      - name: Check formatting
-        run: cargo fmt -- --check
 
       - name: Clippy (SARIF)
         run: >
@@ -174,9 +195,6 @@ jobs:
 
       - name: Clippy (fail on warnings)
         run: cargo clippy --all-targets --all-features -- -D warnings
-
-      - name: cargo-deny advisories
-        run: cargo deny check advisories
 
   # ── Unit Tests ──────────────────────────────────────────────────────
   test-unit:
@@ -516,7 +534,7 @@ jobs:
       - name: Validate RPM package
         run: |
           sudo apt-get install -y rpmlint
-          rpmlint *.rpm || true
+          rpmlint -c deploy/rpm/rpmlint.toml *.rpm
           # Log contents for review
           rpm -qpl *.rpm || true
 
@@ -572,11 +590,12 @@ jobs:
     name: CI
     runs-on: ubuntu-latest
     if: always()
-    needs: [lint, test-unit, test-integration, compile-debug, coverage, binary-size, package-linux, package-macos]
+    needs: [check, clippy, test-unit, test-integration, compile-debug, coverage, binary-size, package-linux, package-macos]
     steps:
       - name: Check results
         run: |
-          echo "lint: ${{ needs.lint.result }}"
+          echo "check: ${{ needs.check.result }}"
+          echo "clippy: ${{ needs.clippy.result }}"
           echo "test-unit: ${{ needs.test-unit.result }}"
           echo "test-integration: ${{ needs.test-integration.result }}"
           echo "compile-debug: ${{ needs.compile-debug.result }}"
@@ -586,8 +605,12 @@ jobs:
           echo "package-macos: ${{ needs.package-macos.result }}"
 
           # Fail if any required job failed or was cancelled
-          if [[ "${{ needs.lint.result }}" == "failure" || "${{ needs.lint.result }}" == "cancelled" ]]; then
-            echo "::error::lint failed"
+          if [[ "${{ needs.check.result }}" == "failure" || "${{ needs.check.result }}" == "cancelled" ]]; then
+            echo "::error::check failed"
+            exit 1
+          fi
+          if [[ "${{ needs.clippy.result }}" == "failure" || "${{ needs.clippy.result }}" == "cancelled" ]]; then
+            echo "::error::clippy failed"
             exit 1
           fi
           if [[ "${{ needs.test-unit.result }}" == "failure" || "${{ needs.test-unit.result }}" == "cancelled" ]]; then
