feat(gateway): add enabled flags and expand test coverage
Add gateway.enabled and per-webhook enabled flags (both default true)
so the HTTP server and individual webhooks can be toggled without
removing config. Disabled gateway skips server startup; disabled
webhooks return 404.

Add tower as dev dependency for router-level testing. Expand gateway
tests from 10 to 19: health endpoint JSON validation, missing/bad
signature, payload too large, alternative signature headers, direct
delivery to targets, and agent_turn routing through the agent loop.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -111,6 +111,7 @@ panic = "unwind"      # Unwind on panic (required for tool panic isolation via t
 
 [dev-dependencies]
 proptest = "1.4"
+tower = { version = "0.5", features = ["util"] }
 wiremock = "0.6.5"
 
 [package.metadata.deb]
