feat(config): add config file hot-reload for cost guard limits
Watch the config file for changes using the `notify` crate, debounce
at 400ms, validate, and broadcast via tokio::sync::watch. CostGuard
hot-reloads dailyBudgetCents and maxActionsPerHour immediately without
restart. Other config fields log "requires restart" on change.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,6 +53,7 @@ html-escape = "0.2"
 indexmap = "2"
 keyring = { version = "3", optional = true }
 lru = "0.16"
+notify = "7"
 oauth2 = "5.0"
 open = "5.0"
 qr2term = { version = "0.3", optional = true }
