test: add 25 unit tests across 4 untested modules
Add broader test coverage for SessionManager (persistence, LRU cache,
cleanup), MessageBus (rate limiting, leak detection), tool setup (trust
filtering, protected names), and ChannelManager (retry logic, mock
channels). Extract is_community_safe() helper for testability. Add
filetime dev dependency for session cleanup mtime tests.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,6 +110,7 @@ strip = true          # Strip debug symbols
 panic = "unwind"      # Unwind on panic (required for tool panic isolation via tokio::task::spawn)
 
 [dev-dependencies]
+filetime = "0.2"
 proptest = "1.4"
 tower = { version = "0.5", features = ["util"] }
 wiremock = "0.6.5"
