--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -530,7 +530,7 @@ jobs:
   package-linux:
     name: Package (linux)
     runs-on: ubuntu-latest
-    needs: [changes, compile-release-linux]
+    needs: [changes]
     if: needs.changes.outputs.code == 'true'
     steps:
       - uses: actions/checkout@v6
@@ -540,21 +540,26 @@ jobs:
         with:
           toolchain: ${{ env.NIGHTLY_VERSION }}
 
-      - name: Restore cargo cache
-        uses: actions/cache/restore@v5
+      - name: Cache cargo
+        uses: actions/cache@v5
         with:
           path: |
             ~/.cargo/registry/index/
             ~/.cargo/registry/cache/
             ~/.cargo/git/db/
             target/
-          key: cargo-release-linux-${{ env.NIGHTLY_VERSION }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: cargo-release-linux-${{ env.NIGHTLY_VERSION }}-
+          key: cargo-package-linux-${{ env.NIGHTLY_VERSION }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: cargo-package-linux-${{ env.NIGHTLY_VERSION }}-
 
       - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y cmake
+
+      - name: Build release binary
+        run: cargo build --release --target x86_64-unknown-linux-gnu
+        env:
+          SOURCE_DATE_EPOCH: "1"
 
       - name: Build DEB package
         run: |
