feat(safety): use Aho-Corasick for two-phase leak detection
Replace per-pattern regex iteration with a two-phase approach:
1. Aho-Corasick automaton scans for literal prefixes in a single pass
2. Full regex validation only runs on patterns whose prefix was found

Uses find_overlapping_iter() so shorter prefixes (sk-) don't shadow
longer ones (sk-ant-api) at the same position. Adds 5 new tests
covering multi-pattern detection, prefix disambiguation, and
the fast-path for text with no secret prefixes.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ channel-whatsapp = ["dep:whatsapp-rust", "dep:whatsapp-rust-tokio-transport", "d
 channel-twilio = ["dep:sha1"]
 
 [dependencies]
+aho-corasick = "1.1"
 anyhow = "1.0"
 async-trait = "0.1"
 axum = "0.8"
