feat(memory): add recency-weighted BM25 search scoring
Apply exponential decay (0.5 ^ (age_days / half_life_days)) to normalized
BM25 scores during hybrid search. Older memory entries get progressively
lower keyword scores while vector similarity remains unaffected.
Configurable via recencyHalfLifeDays (default 90, 0 = disabled).

--- a/config.example.json
+++ b/config.example.json
@@ -41,7 +41,8 @@
         "hybridWeight": 0.5,
         "searchFusionStrategy": "weighted_score",
         "rrfK": 60,
-        "embeddingCacheSize": 10000
+        "embeddingCacheSize": 10000,
+        "recencyHalfLifeDays": 90
       },
       "costGuard": {
         "dailyBudgetCents": null,
