feat(exfil): replace blocked_tools list with network_outbound capability
The exfiltration guard now queries each tool's `network_outbound`
capability instead of checking a hardcoded blocked tools list.
Removed `blocked_tools` field from ExfiltrationGuardConfig entirely.
Added `allow_tools` for opt-in overrides of specific network tools.

Both schema-level filtering and execution-time dispatch blocking
now use capability metadata. Subagent tool filtering also uses
the same capability-based approach via the exfil guard config.

Removed dead fields from SubagentConfig (brave_api_key, exec_timeout,
restrict_to_workspace, allowed_commands, sandbox_config).

--- a/config.example.json
+++ b/config.example.json
@@ -197,7 +197,7 @@
   "tools": {
     "exfiltrationGuard": {
       "enabled": false,
-      "blockedTools": ["http", "web_fetch", "browser"]
+      "allowTools": []
     },
     "web": {
       "search": {
