--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ cap-std = "4"
 chrono = { version = "0.4", features = ["serde"] }
 chrono-tz = "0.10"
 clap = { version = "4.5", features = ["derive"] }
+clap_complete = "4.5"
 cron = "0.15"
 dirs = "6.0"
 fastembed = { version = "5", default-features = false, features = ["hf-hub", "hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }
