feat(workspace): add WorkspaceTtlConfig to agent defaults

--- a/config.example.json
+++ b/config.example.json
@@ -59,6 +59,14 @@
         "firmThreshold": 20,
         "urgentThreshold": 30,
         "recentToolsWindow": 10
+      },
+      "workspaceTtl": {
+        "temp": 7,
+        "downloads": 30,
+        "images": 90,
+        "code": null,
+        "documents": null,
+        "data": null
       }
     }
   },
